--- a/package.json
+++ b/package.json
@@ -3,16 +3,13 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite",
-				"fix:eslint": "eslint --ext .js,.vue resources/js/ --fix"
+        "dev": "vite"
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^5.2.1",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
-        "eslint": "^9.18.0",
-        "eslint-plugin-vue": "^9.32.0",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.47",
         "tailwindcss": "^3.4.13",
