--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   mysql:
-    image: mariadb:10.8.3
+    image: mariadb
     # Uncomment below when on Mac M1
     # platform: linux/arm64/v8
     command: --default-authentication-plugin=mysql_native_password
